--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "mongoose": "^8.6.3",
     "mysql": "^2.18.1",
     "mysql2": "^3.11.3",
+    "pg": "^8.13.0",
+    "pg-hstore": "^2.3.4",
     "rxjs": "~7.8.0",
     "sequelize": "^6.37.3",
     "tslib": "^2.3.0",
